# json-hydrate-benchmark

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  asv.conf.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt
.github/workflows/: CI.yml
benchmarks/: benchmarks.py
python/json_hydrate_benchmark/: __init__.py
scripts/: bench  update-requirements
src/: lib.rs
tests/: test_json_hydrate.py
tests/data/: landsat-c2-l1.json
tests/data/dehydrated/: LM04_L1GS_001001_19830527_02_T2.json
tests/data/hydrated/: LM04_L1GS_001001_19830527_02_T2.json
