[project]
name = "json-hydrate-benchmark"
version = "0.0.0" # this package is not meant for release
authors = [{ name = "Pete Gadomski", email = "pete.gadomski@gmail.com" }]
description = "Small hobby project to test the performance of Rust<->Python bindings for hydration in pgstac"
readme = "README.md"
requires-python = "~=3.11.0"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["dependencies", "optional-dependencies"]

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"

[tool.maturin.dynamic]
dependencies = { file = "requirements.txt" }
optional-dependencies = { dev = { file = "requirements-dev.txt" } }

[tool.mypy]
strict = true

[tool.ruff]
include = ["F", "E", "I", "RUF"]

[tool.isort]
profile = "black"
